@@ -45,6 +45,7 @@ class SmartyTests extends PHPUnit_Framework_TestSuite {
         $smarty->registered_plugins = array();
         $smarty->default_plugin_handler_func = null;
         $smarty->registered_objects = array();
+        $smarty->default_modifiers = array();
         $smarty->registered_filters = array();
         $smarty->autoload_filters = array();
         $smarty->escape_html = false;
